form inputs rounded. sticky footer FIXED. some card spacing changed.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -40,11 +40,14 @@ html, body {
     padding: 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
+    height: 100%
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
     color: var(--main-font-color);
+    display: flex;
+    flex-direction: column;
 }
 
 a {
@@ -74,7 +77,7 @@ input {
 
 ul, ol {
     margin: 0;
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 1rem;
 }
 
 .clearfix:after {
@@ -87,24 +90,16 @@ ul, ol {
     :root {
         font-size: 1rem;
     }
+    ul, ol {
+        padding: 0 0 0 2rem;
+    }
 }
 
 /* HEADER STYLES */
 
-/* .page-bg {
-    background: url('../assets/food_pattern.svg');
-    -webkit-filter: grayscale(1);
-    -moz-filter: grayscale(1);
-    -o-filter: grayscale(1);
-    -ms-filter: grayscale(1);
-    filter: grayscale(1);
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  } */
+header {
+    flex: 0 0 auto;
+}
 
 .topbar {
     height: auto;
@@ -121,14 +116,12 @@ ul, ol {
     margin: 0 auto;  
 }
 
+main {
+    flex: 1 0 auto;
+}
+
 .container-body {
     padding: 0 10px;
-
-    /* push footer to bottom if content isn't long enough */
-    min-height: 70vh;
-    min-height: -webkit-calc(100vh - 100px - 32px);
-    min-height: -moz-calc(100vh - 100px -  30px - 32px);
-    min-height: calc(100vh - 100px - 30px - 32px);
 }
 
 .topbar h1 {
@@ -257,7 +250,7 @@ ul, ol {
 
 .card {
     margin-bottom: 20px;
-    padding: 5%;
+    padding: 3% 5%;
     background: var(--card-bg-color);
     border-radius: 5px;
     position: relative;
@@ -341,7 +334,7 @@ ul, ol {
     }
 }
 
-/* NEW ROUTE STYLES */
+/* NEW & EDIT ROUTE STYLES */
 
 .new {
     background: var(--card-li-odd-color);
@@ -351,6 +344,9 @@ ul, ol {
 form input,textarea {
     width: calc(100% - 6px);
     margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #a9a9a9;
+    padding: 5px;
 }
 
 form [name="description"] {
@@ -403,6 +399,7 @@ form hr {
 .show {
     background: var(--show-bg-color);
     border: var(--show-border);
+    padding-bottom: 2rem;
 }
 
 .show h4 {
@@ -411,12 +408,15 @@ form hr {
 
 .show-list {
     /* list-style-position: inside; */
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
-.show li span{
-    position: relative;
-    left: 1.5rem;
+ul.show-list {
+    list-style: circle;
+}
+
+.show li {
+    margin-top: 10px;
 }
 
 .show-hr {
@@ -424,8 +424,25 @@ form hr {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    margin: 2rem auto;
+    margin: 1rem auto;
 }
+
+@media screen and (min-width: 800px) {
+    .show li span{
+        position: relative;
+        left: 1.5rem;
+    }
+    .show li {
+        margin-top: 0;
+    }
+    .show-list {
+        line-height: 2rem;
+    }
+    .show-hr {
+        margin: 2rem auto;
+    }
+}
+
 /*  FOOTER STYLES */
 
 footer {
@@ -433,4 +450,5 @@ footer {
     font-size: .9rem;
     margin-top: 1rem;
     padding: .5rem 1rem;
+    flex: 0 0 auto;
 }
